--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,8 @@
+:host {
+  grid-column: 2;
+  grid-row:1;
+}    
+    
     /* DashboardComponent's private CSS styles */
     [class*='col-'] {
         float: left;
