--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,7 +1,9 @@
-:host {
-  grid-column: 2;
-  grid-row:1;
-}    
+@media (min-width:795px) {
+  :host {
+    grid-column: 2;
+    grid-row:1;
+  }    
+}
     
     /* DashboardComponent's private CSS styles */
     [class*='col-'] {
