--- a/src/app/book-details/book-details.component.css
+++ b/src/app/book-details/book-details.component.css
@@ -1,7 +1,9 @@
-:host {
-    grid-column: 2;
-    grid-row:1;
-  }  
+@media (min-width:795px) {
+    :host {
+        grid-column: 2;
+        grid-row:1;
+    }  
+}
 
 .book-img {
     width:500px;
