--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -14,4 +14,9 @@
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
+    background:white;
+    padding:30px;
+    border-radius:10px;
+    display: flex;
+    flex-direction: column;
 }
