--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -20,3 +20,17 @@
     display: flex;
     flex-direction: column;
 }
+
+.add-btn {
+    position: fixed;
+    bottom:30px;
+    right:30px;
+    padding:15px 20px;
+    text-align:center;
+    color:white;
+    background-color: #ff0066;
+    font-size: 20px;
+    border-radius:50%;
+    border:none;
+    cursor: pointer;
+}
